# my_mod_manual

./: .gitignore  AGENTS.md  LICENSE.md  README.md  mods.toml  pyproject.toml
.codex/skills/minecraft-manual-authoring/: SKILL.md
.codex/skills/minecraft-manual-authoring/agents/: openai.yaml
.codex/skills/minecraft-manual-authoring/references/: repo-patterns.md
.run/: Build Patchouli All.run.xml  Build Patchouli ApprenticeCodex.run.xml  Pytest.run.xml  Validate All.run.xml  Validate Manuals.run.xml
docs/apprenticecodex/patchouli/assets/apprenticecodex/lang/: en_us.json  ja_jp.json
docs/examplemod/patchouli/assets/examplemod/lang/: en_us.json
docs/examplemod/patchouli/en_us/categories/: getting_started.json
docs/examplemod/patchouli/en_us/entries/: first_steps.json
manuscripts/apprenticecodex/patchouli/: book.yml
manuscripts/apprenticecodex/patchouli/locales/en_us/: book.yml
manuscripts/apprenticecodex/patchouli/locales/en_us/categories/: apprentice_guide.yml  devices.yml  enchantments.yml  equipment_and_accessories.yml  items.yml  (+1 more)
manuscripts/apprenticecodex/patchouli/shared/categories/: apprentice_guide.yml  devices.yml  enchantments.yml  equipment_and_accessories.yml  magic_tools.yml
manuscripts/examplemod/patchouli/: book.yml
manuscripts/examplemod/patchouli/pages/first_steps/: 00-introduction.md  01-next-steps.md
manuscripts/examplemod/patchouli/shared/categories/: getting_started.yml
manuscripts/examplemod/patchouli/shared/entries/: first_steps.yml
src/my_mod_manual/: __init__.py  cli.py  models.py  project.py
tests/: test_project.py
(+362 files in other folders)
