[project]
name = "my-mod-manual"
version = "0.1.0"
description = "Multi-mod Minecraft manual authoring and Patchouli generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PyYAML>=6.0.2",
]

[project.scripts]
mod-manual = "my_mod_manual.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_mod_manual"]

[tool.pytest.ini_options]
pythonpath = ["src"]
